--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,8 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+    font-family: "Roboto", Tahoma, Geneva, Verdana, sans-serif;
+    box-sizing: border-box;
+    text-align: center;
+  }
+  
+
+  .general-container{
+    width: 100%;
+    
+    text-align: center;
+  }
 
 .navbar-container {
   max-width: 100vw;
@@ -13,5 +22,340 @@
 .navbar {
   width: 100%;
   height: 100%;
-  background-color: darkcyan;
+  background-color: #DD1A1A;
+  display: flex;
+  align-items: flex-end;
+}
+
+.navbar img {
+  position: absolute;
+  width: 300px;
+  height: 40px;
+  top: 1rem;
+  left: 133px;
+}
+
+.sub-bar {
+  width: 100%;
+  background-color: #0C0C0C;
+  height: 40px;
+  
+}
+
+.container-saludo{
+  text-align: start;
+  margin-left: 7rem;
+}
+
+.container-saludo .saludo {
+  color: #FE1936;
+  font-weight: bold;
+}
+
+.container-search {
+  text-align: center;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.container-search input {
+  width: 300px;
+  text-align: start;
+  padding-left: 10px;
+}
+
+.container-search select {
+  width: 200px;
+  text-align-last:left;
+  padding-left: 10px;
+}
+
+
+option {
+  text-align: left;
+  color: #416460;
+  font-size: 18px;
+}
+
+
+.container-search button {
+  background-color: #D93F3F;
+  margin-right: 1rem;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+}
+
+.container-page button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.characters-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.col {
+  width: 100%;
+  padding: 6px;
+  height: 400px;
+  margin-top: 1rem;
+}
+
+.card {
+  height: 100%;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-info {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 7rem;
+  background-color: white;
+  position: relative;
+}
+
+.container-image {
+  width: 100%;
+  height: 150px;
+  position: absolute;
+  text-align: center;
+  top: -96px;
+  
+}
+
+.container-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.container-name-type {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 3rem;
+    
+}
+
+.container-name-type h2 {
+  margin-top: 0.5rem;
+}
+
+.container-name-type h5 {
+  font-size: 12px;
+  margin-top: -1rem;
+  color: #4F4F4F;
+}
+
+.vector {
+  margin-top: -.5rem;
+  width: 100%;
+}
+
+.container-info-general {
+  display: flex;
+  font-size: 15px;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.container-info-general span {
+  font-size: 15px;
+  color: #9F9F9F;
+}
+
+.container-info-general p {
+  font-weight: bold;
+}
+
+.container-info-1 {
+  width: 50%;
+  height: 120px;
+  margin-top: -1.6rem;
+}
+
+.container-info-2 {
+  width: 50%;
+  height: 120px;
+  margin-top: -1.6rem;
+}
+
+.container-page {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  margin-top: 1rem;
+}
+
+.container-boton-next-prev {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.container-boton-next-prev :hover {
+  background-color: darkorange;
+}
+
+.boton-paginated {
+  display: flex;
+  justify-content: center;
+  gap: .5rem;
+  margin: 1rem;
+  color: #212121;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.boton-paginated :hover {
+  background-color: darkorange;
+}
+
+.container-general-details {
+  
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  padding-bottom: 2rem;
+  gap: 1rem;
+}
+
+.container-card-details {
+  width: 600px;
+  height: 350px;
+  display: flex;
+  background-color: white;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.container-image-details {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  top: -6rem;
+    
+}
+
+.container-image-details img {
+  width: 100%;
+}
+
+.container-name-details {
+  width: 50%;
+   
+}
+
+.container-weight {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 4rem;
+  font-weight: bold;
+  
+}
+
+.container-height img {
+  width: 100%;
+}
+
+.container-weight img {
+  width: 100%;
+}
+
+.container-height {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 4rem;
+  font-weight: bold;
+}
+
+.container-moviments-general {
+  height: 100%;
+  display: flex;
+  
+  justify-content: center;
+  flex-direction: column;
+  
+}
+
+.container-move {
+  margin-top: 9rem;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.container-move-list{
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  padding-bottom: .5rem;
+  align-items: center;
+}
+
+
+.container-boton-move-list {
+  margin-top: 1.5rem;
+}
+
+.abilities-list {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  margin-top: .5rem;
+}
+
+
+
+@media (min-width: 572px) {
+  .col {
+    width: 50%;
+  }
+}
+
+@media (min-width: 752px) {
+  .col {
+    width: 33.333333%;
+  }
+}
+
+@media (min-width: 992px) {
+  .col {
+    width: 25%;
+  }
+}
+
+@media (min-width: 1176px) {
+  .col {
+    width: 20%;
+  }
 }
